packages/fuels-macros/tests/ui/derive/parameterize/tuple_like_structs_not_supported.stderr
error: Tuple-like structs not supported
 --> tests/ui/derive/parameterize/tuple_like_structs_not_supported.rs:4:19
  |
4 | struct SomeStruct(pub u64, pub String);
  |                   ^^^^^^^^^^^^^^^^^^^
