packages/fuels-macros/tests/ui/derive/parameterize/tuple_like_structs_not_supported.rs
use fuels_macros::Parameterize;

#[derive(Parameterize)]
struct SomeStruct(pub u64, pub String);

fn main() {}
